dogfooding a flow pr to improve Table component